testing/tests/ui/lit_on_assignment_lhs.stderr
error: proc-macro derive panicked
 --> $DIR/lit_on_assignment_lhs.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = help: message: Cannot have literals on the left-hand-side of an assignment.
